--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Está api é apenas um teste solicitado por um grande empresa.",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js --ignore __tests__"
     },
     "keywords": [],
     "author": "Christian Possidonio",
@@ -13,5 +14,10 @@
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "mongoose": "^5.6.0"
+    },
+
+    "devDependencies": {
+        "nodemon": "^1.19.1"
     }
+
 }
