--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
     "main": "index.js",
     "scripts": {
         "start": "node src/index.js",
-        "dev": "nodemon src/index.js --ignore __tests__"
+        "dev": "nodemon src/index.js"
     },
     "keywords": [],
     "author": "Christian Possidonio",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.6.0"
     },
 
     "devDependencies": {
         "nodemon": "^1.19.1"
     }
-
 }
