--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "author": "Christian Possidonio",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.19.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.6.0"
-    },
 
+    },
     "devDependencies": {
         "nodemon": "^1.19.1"
     }
